# RP2350-OATH

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  README_IMPLEMENTATION.md  build_log.txt  final_build_log.txt  final_build_log_10.txt  final_build_log_11.txt  final_build_log_2.txt  final_build_log_3.txt  final_build_log_4.txt  final_build_log_5.txt  final_build_log_6.txt  final_build_log_7.txt  final_build_log_8.txt  final_build_log_9.txt  pico_sdk_import.cmake
docs/: ADVANCED_IMPLEMENTATION_COMPLETE.md  AES_IMPLEMENTATION_GUIDE.md  CCID_IMPLEMENTATION.md  CCID_IMPLEMENTATION_GUIDE.md  COMPATIBILITY_TESTING_PLAN.md  COMPLETION_ROADMAP.md  DESIGN_AND_IMPLEMENTATION.md  FUTURE_ROADMAP.md  HMAC_HARDWARE_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OATH_PROTOCOL_GUIDE.md  OTP_IMPLEMENTATION_GUIDE.md  PROTOCOL.md  RESOURCES_AND_BUDGET.md  RESOURCES_BUDGET.md  REVERSE_ENGINEERING_YUBICO.md  SECURITY_IMPLEMENTATION.md  SUCCESS_METRICS.md  TRUSTZONE_TF-M_GUIDE.md  VALIDATION_AND_DELIVERY_PLAN.md  WEBUSB_FIDO2_IMPLEMENTATION.md  test_script.py  websocket_server.js  webusb_dashboard.html  webusb_demo.html
include/: secure_functions.h  secure_gateway.h
include/boards/: tenstar_rp2350_usb.h
non_secure_world/: CMakeLists.txt  memmap_ns.ld
non_secure_world/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
non_secure_world/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
non_secure_world/src/: main.c  secure_gateway.c  secure_gateway.h  tusb_config.h  usb_descriptors.c
non_secure_world/src/usb/: ccid_device.c  ccid_device.h  ccid_protocol.h  fido2_bioenrollment.c  fido2_bioenrollment.h  fido2_ctap21.c  fido2_ctap21.h  fido2_device.c  fido2_device.h  usb_composite.c  usb_composite.h  webusb_crypto.c  webusb_crypto.h  webusb_device.c  webusb_device.h
pico-sdk/src/rp2_common/pico_status_led/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
pico-sdk/src/rp2_common/pico_status_led/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
secure_world/: CMakeLists.txt  main_secure.c  memmap_secure.ld  secure_functions.h
secure_world/src/: applet_manager.c  applet_manager.h  hid_keyboard.c  hid_keyboard.h  main_s.c  main_secure_new.c  secure_gateway_s.c  time_sync.c  time_sync.h
secure_world/src/crypto/: aes.c  aes.h  aes_gcm.c  aes_gcm.h  asm_arm.inc  hmac.c  hmac.h  platform-specific.inc  sha1.c  sha1.h  sha256.c  sha256.h  types.h  uECC_vli.h  whmac_rp2350.c
secure_world/src/drivers/: led_driver.c  led_driver.h  ws2812.pio
secure_world/src/oath/: apdu_protocol.h  cbor.c  cbor.h  fido2_applet.c  fido2_applet.h  fido2_storage.c  fido2_storage.h  iso7816_4.c  iso7816_4.h  management_applet.c  management_applet.h  oath_protocol.c  oath_protocol.h  oath_storage.c  oath_storage.h  openpgp_applet.c  openpgp_applet.h  openpgp_storage.c  openpgp_storage.h
secure_world/src/security/: hsm.c  hsm.h  otp_lowlevel.h  security.c  security.h  security_manager.h
tools/: hsm_test.py  sign_firmware.py
